# Weather-Forecast

./: CMakeLists.txt  config.json  main.cpp
lib/WeatherForecast/: CMakeLists.txt  Forecast.cpp  Forecast.h
